# tauri_base

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  file_util.rs  json_util.rs  main.rs  window_ext.rs
src-tauri/src/commands/: mod.rs
src/assets/scss/: main.scss  scrollbar.scss  titlebar.scss
src/components/home/: Overview.tsx  RecentSales.tsx
src/components/nav/: MainNav.tsx  Menu.tsx  NavLinks.tsx  Search.tsx
src/components/ui/: menubar.tsx
src/lib/: constants.ts
src/services/: app-updater.ts  platform.tsx
src/views/: Home.tsx  Settings.tsx
